# Agora

./: .env.example  .gitignore  .impeccable.md  0329-design.txt  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  HANDOVER.md  README.ja.md  README.md  README.zh-CN.md  agora  notes.md  pyproject.toml  task_plan.md  week2-plan.md
.github/workflows/: ci.yml
.skills/: team-coding-orchestrator  team-coding-orchestrator-workspace
.skills/acpx-agent-delegate/: SKILL.md
.skills/agora-bootstrap/: SKILL.md
.skills/create-nomos/: SKILL.md
.skills/zeyu-ai-brain-sop/: SKILL.md
.skills/zeyu-docs-retrieval/: README.md  SKILL.md  USAGE_EXAMPLES.md  (+6 more)
Doc/: Agora-Implementation-SSoT-Template.md  README.md  agents-contributor-reference.md  architecture-overview.md  discord-setup.md  openclaw-local-setup.md  quick-start.md  whitepaper.md
agora/: README.md
agora-ai-brain/: AGORA.md  IDENTITY.md  README.md
agora-ts/: README.md  eslint.config.js  package-lock.json  package.json  tsconfig.base.json  tsconfig.workspace.build.json  tsconfig.workspace.json  vitest.config.ts
dashboard/: .gitignore  README.md  app.js  index.html  package-lock.json  package.json  styles.css  tsconfig.app.json  vite.config.ts
dashboard-mvp-backup/: index.html
scripts/: acpx-claude.mjs  acpx-delegate.integration.test.mjs  acpx-delegate.mjs  acpx-delegate.test.mjs  bootstrap-local.sh  check-review-guardrails.mjs  check-shared-contracts.mjs  check-ts-all.sh  craftsman-runtime.sh  dev-start.sh  review-guardrails-baseline.json  sync-agora-private.sh  sync-agora-private.test.mjs  sync-openclaw-server-url.sh
(+458 files in other folders)
