[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "agora"
version = "0.1.0"
description = "Multi-Agent Democratic Orchestration Framework"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.30.0",
]

[project.scripts]
agora = "agora.scripts.agora_cli:app"
